[package]
name = "redis-rwproxy"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1"
bytes = "1"
clap = { version = "4.5", features = ["derive"] }
dashmap = "6"
redis-protocol = { version = "6", features = ["bytes", "resp2", "resp3"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"

[profile.release]
strip = true
lto = true
codegen-units = 1
