[package]
name = "redis-rwproxy"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
bytes = "1.11.0"
clap = { version = "4.5.53", features = ["derive"] }
dashmap = "6.1.0"
redis-protocol = { version = "6.0.0", features = ["bytes", "resp2", "resp3"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
url = "2.5.7"

[profile.release]
strip = true
lto = true
codegen-units = 1
